--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Abdubidopsis
+email: abdul.suboor123@yahoo.com
+url: https://github.com/Abdubidopsis/abdubidopsis.github.io
+description: "My Portfolio"
+keywords: "Plant genetics, molecular biology, bioinformatics, phd"
+skills: "Plant Molecular Biologist -  currently PhD candidate at University of Cologne in Germany."
+meta_author: Khan Abdul Saboor
+
 
 # Google webmaster tools
 google_verify:
@@ -25,42 +26,49 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 959D90 #18bc9c #80B3FF ##  #959D90 BA8768 18bc9c #80B3FF
+  primary-rgb: "86,155,104" #"128,179,255" "86 135 104" "206, 155, 0" "255, 255, 255"  "149, 157, 144" "86 135 104" , "24,288,156" #"128,179,255"
+  secondary: FD6E8A #FD6E8A #391d00 #3C5759 ##2c3e50 #BA8768 2c3e50 #FD6E8A
+  secondary-dark: 304647 #A2122F ##6F3317 #1a0000 #304647 #233140 233140 #A2122F
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
-  location: Location
-  social: Around the Web
+  copyright: Abdul Saboor Khan
+  location: At the moment
+  social: Find me at
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: https://twitter.com/Abdubidopsis
+  - title: Linkedin
+    url: https://www.linkedin.com/in/abdul363/
+ # - title: stack-overflow
+ #   url: http://stackoverflow.com/questions/tagged/jekyll
+ # - title: bitbucket
+ #   url: http://bitbucket.org/jekyll
+ # - title: github
+ #   url: http://github.com/jekyll
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Institute for Plant Sciences, Biozentrum, University of Cologne
+  - line: 50674, Germany
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
+# Add collections
+#collections:
+#  activities:
+#    output: true
+#    permalink: "" #/activities/:title/
+
 # Build settings
 markdown: kramdown
 permalink: pretty
+future: true
 
 #for posts
 defaults:
