--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Abdubidopsis
+title: Abdul Saboor Khan
 email: abdul.suboor123@yahoo.com
 url: https://github.com/Abdubidopsis/abdubidopsis.github.io
 description: "My Portfolio"
