--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,14 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 959D90
-  primary-rgb: "86,155,104"
-  secondary: 1a1a4d # This is the dark blue color you want
-  secondary-dark: 304647
+  primary: BA8768 #ce9b00 #FFFFFF  #959D90 
+  primary-rgb: "86 135 104" #"206, 155, 0" #"255, 255, 255"  #"149, 157, 144" 
+  secondary: BA8768 #391d00 #3C5759 
+  secondary-dark: 6F3317 #1a0000 #304647
+#  primary: 959D90
+#  primary-rgb: "86,155,104"
+#  secondary: 1a1a4d # This is the dark blue color you want
+#  secondary-dark: 304647
 #  primary: 959D90 #18bc9c #80B3FF ##  #959D90 BA8768 18bc9c #80B3FF
 #  primary-rgb: "86,155,104" #"128,179,255" "86 135 104" "206, 155, 0" "255, 255, 255"  "149, 157, 144" "86 135 104" , "24,288,156" #"128,179,255"
 #  secondary: FD6E8A #FD6E8A #391d00 #3C5759 ##2c3e50 #BA8768 2c3e50 #FD6E8A
