--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ color:
 # Footer settings
 footer:
   copyright: Abdul Saboor Khan
-  location: At the moment
-  social: Find me at
+  location: Currently based in
+  social: Find me online at
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
