--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ disqus_shortname: myshortname
 color:
   primary: BA8768 #ce9b00 #FFFFFF  #959D90 
   primary-rgb: "86 135 104" #"206, 155, 0" #"255, 255, 255"  #"149, 157, 144" 
-  secondary: BA8768 #391d00 #3C5759 
+  secondary: 1a1a4d  #BA8768 #391d00 #3C5759 
   secondary-dark: 6F3317 #1a0000 #304647
 #  primary: 959D90
 #  primary-rgb: "86,155,104"
