--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: abdul.suboor123@yahoo.com
 url: https://github.com/Abdubidopsis/abdubidopsis.github.io
 description: "My Portfolio"
 keywords: "Plant genetics, molecular biology, bioinformatics, phd"
-skills: "Plant Molecular Biologist -  currently PhD candidate at University of Cologne in Germany."
+skills: "</b> Plant Molecular Biology - Functional Biology </b><br> ----- <br> currently PhD candidate at University of Cologne in Germany.</b>"
 meta_author: Khan Abdul Saboor
 
 
